# AMBEA

./: .gitignore  README.md
code/: .gitignore  konect_to_mbea.txt
code/MBE/: AdaptiveFinder.h  AggressiveFinder.cpp  AggressiveFinder.h  BaselineFinder.cpp  BiGraph.cpp  BiGraph.h  BicliqueFinder.cpp  BicliqueFinder.h  CMakeLists.txt  Utility.h  main.cpp  test_script.sh
code/appendix_code/MBEA_proj_interface/: .gitignore  BiGraph.cc  BiGraph.h  BicliqueFinder.cc  BicliqueFinder.h  CMakeLists.txt  main.cc  utility.cc  utility.h
code/appendix_code/code_buf/: BiGraph.cpp  BiGraph.h  BicliqueFinder.cpp  BicliqueFinder.h  BicliqueFinderFast.cpp  BicliqueFinderFast.h  BitMBE.cpp  BitMBE.h  BoundMBE.cpp  BoundMBE.h  CMakeLists.txt  ComMBE.cpp  ComMBE.h  PMBE.cpp  PMBE.h  QuasiMBE.cpp  QuasiMBE.h  Utility.cpp  main.cpp  test_script.sh
code/appendix_code/mbea/: README  biclique.c  biclique.h  bigraph.c  bigraph.h  dataset_to_mbea.py  mbea  mbea-driver.c  sample_output.txt  sample_output.txt.profile  utility.h
code/appendix_code/mbea/db/: 01_01_10.mbea  02_02_10.mbea  05_05_10.mbea  10_10_10.mbea  10_9.mbea  1_1_10.mbea  6_7.mbea
code/cohesive_subgraph_bipartite/: main.cpp  ooMBE.cpp  test_script.sh
code/datasets/: adj_lists_preprocess.cpp  data_convert  data_convert.cpp  data_convert.sh  data_sampling_vertices.cpp  preprocess
code/datasets/IBMGenerator/: gen-Quest-Density.sh  gen-exp-datasets.sh
code/datasets/konect_db/: load_script.sh  url.txt
datasets/: ActorMovies.adj  EuAll.adj  MovieLens.adj  Teams.adj  UCforum.adj  Unicode.adj  Wikipedia.adj  Writers.adj
scripts/: compile-MBE.sh  overall-evaluation.sh
